Enhance I18nConsistencyCheck: Add UTF-8 encoding validation, invisible character checks, and line ending consistency analysis